1.04 - Mar 26, 2007

        * add observed_state and I/O utiliz% columns to mogadm check.

        * removed support for non-http:// storage node URLs.  that is,
          "NFS mode" is now gone.  yay.  it always sucked.

1.03 - Sep 25, 2006

        * rename from MogileFS to MogileFS::Client, add POD, prep for
          future work.

        * more verbose error messages

        * AUTOLOAD-proxy unknown methods to server for server-based
          plugins (Mark Smith)

        * Andreas J. Koenig <andreas.koenig.gmwojprw@franz.ak.mind.de>:
	  The following bugfix guards against externally influenced $/. In
	  our case, somebody (not @danga :) had set $/ to undef and so the
	  application was hanging forever.

1.01 - Jan 10, 2005

        * fix CPU spinning bug in _getline where we didn't handle
	  sysread() returning 0.  (Brad)
